tests/samples/negative/core/ordinary_main_abi_name.ax
module ordinary_main_abi_name;

@name("main")
fn main() -> i32 {
    return 0;
}
